bootstrap stripe key

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Build and start Docker containers
         run: |
-          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres up -d --build --force-recreate
+          echo "STRIPE_KEY=${{ secrets.STRIPE_API_KEY }}" >> test.env
+          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres up -d --build
 
       - name: Health Check the Server http response
         uses: jtalk/url-health-check-action@v4
