fix embed.js function call (#1998)
* fix embed.js function call

* test spacing fix

* add in missing embed service hostename var

---------

Co-authored-by: tevko <timevko@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,7 @@ services:
       labels:
         polis_tag: ${TAG:-dev}
       args:
+        EMBED_SERVICE_HOSTNAME: ${EMBED_SERVICE_HOSTNAME}
         GA_TRACKING_ID: ${GA_TRACKING_ID}
         GIT_HASH: "${GIT_HASH:-placeholder}"
         NODE_ENV: production
