--- a/server/package.json
+++ b/server/package.json
@@ -83,6 +83,7 @@
     "ts-node": "^10.9.2",
     "underscore": "~1.12.1",
     "valid-url": "~1.0.9",
+    "validate-color": "^2.2.4",
     "winston": "~3.8.2",
     "xmlbuilder2": "^3.1.1"
   },
