Store math in DynamoDB (WIP).

--- a/delphi/example.env
+++ b/delphi/example.env
@@ -1,24 +1,53 @@
-# Server configuration
+# ===== Data Storage Configuration =====
+# DynamoDB is the preferred data store - set to true to enable
+USE_DYNAMODB=true
+PREFER_DYNAMODB=true
+# Set to true to completely disable PostgreSQL lookups (will use placeholders for comment texts)
+SKIP_POSTGRES_LOAD=false
+
+# ===== DynamoDB Configuration =====
+# Endpoint URL for DynamoDB (local or AWS)
+DYNAMODB_ENDPOINT=http://host.docker.internal:8000
+AWS_REGION=us-west-2
+# Only needed for production AWS access
+# AWS_ACCESS_KEY_ID=your_access_key
+# AWS_SECRET_ACCESS_KEY=your_secret_key
+
+# ===== PostgreSQL Configuration =====
+# Primary PostgreSQL variables (preferred)
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=polisDB_prod_local_mar14
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
+
+# Legacy PostgreSQL variables (fallback)
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=polisDB_prod_local_mar14
+DATABASE_USER=postgres
+DATABASE_PASSWORD=
+DATABASE_SSL_MODE=disable
+DATABASE_POOL_SIZE=5
+
+# ===== API Integration =====
+# Anthropic API key for narrative report generation
+ANTHROPIC_API_KEY=
+
+# ===== Ollama Configuration =====
+# Ollama endpoint for local LLM processing
+OLLAMA_HOST=http://ollama:11434
+# Model to use (default: llama3:8b)
+OLLAMA_MODEL=llama3:8b
+
+# ===== Server Configuration =====
 HOST=localhost
 PORT=8080
 # Default WARN
 LOG_LEVEL=INFO
 MATH_ENV=dev
 
-# Database configuration
-DATABASE_HOST=localhost
-DATABASE_NAME=polis_subset
-DATABASE_PASSWORD=christian
-DATABASE_PORT=5432
-DATABASE_USER=christian
-
-# Database advanced
-DATABASE_SSL_MODE=disable
-# Default 5
-DATABASE_POOL_SIZE=5
-# Default 10
-
-# Conversation configuration
+# ===== Conversation Configuration =====
 # Default 5
 CONV_GROUP_K_MAX=5
 # Default 2
@@ -28,7 +57,7 @@ CONV_MAX_CMTS=400
 # Default 5000
 CONV_MAX_PTPTS=5000
 
-# Polling configuration
+# ===== Polling Configuration =====
 POLL_ALLOWLIST=
 POLL_BLOCKLIST=
 # Default 1000
