--- a/example.env
+++ b/example.env
@@ -127,7 +127,7 @@ MAX_REPORT_CACHE_DURATION=
 
 ###### DYNAMODB ######
 # When using local DynamoDB, this should be http://dynamodb:8000.
-# In production, set DYNAMODB_ENDPOINT to the cloud endpoint (e.g. https://dynamodb.us-west-2.amazonaws.com),
+# In production, set DYNAMODB_ENDPOINT to the cloud endpoint (e.g. https://dynamodb.us-east-1.amazonaws.com),
 # or simply leave it blank.
 DYNAMODB_ENDPOINT=http://dynamodb:8000
 
