--- a/delphi/Dockerfile
+++ b/delphi/Dockerfile
@@ -63,7 +63,7 @@
   WORKDIR /app
   
   COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
-  COPY --from=builder /usr/local/bin /usr/local/bin # For any CLI tools installed by pip
+  # COPY --from=builder /usr/local/bin /usr/local/bin # For any CLI tools installed by pip
   
   COPY polismath/ ./polismath/
   COPY scripts/ ./scripts/
