--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -62,7 +62,7 @@ jobs:
           mv ${{ github.workspace }}/.buildx-cache-new ${{ github.workspace }}/.buildx-cache
           
           # Start containers
-          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres --profile local-services up -d --build
+          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres --profile local-services --build-arg IS_GITHUB_ACTION=true up -d --build
         env:
           DOCKER_BUILDKIT: 1
           COMPOSE_DOCKER_CLI_BUILD: 1
