--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -200,6 +200,17 @@ services:
     # Run ollama server
     command: serve
     restart: unless-stopped
+    # Increase resource limits to prevent model crashes
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+      stack:
+        soft: -1
+        hard: -1
 
   # MinIO S3-compatible storage
   minio:
