--- a/delphi/requirements.txt
+++ b/delphi/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.26.4
-pandas==2.1.4
+numpy>=1.26.4,<2.0
+pandas>=2.1.4
 sqlalchemy==2.0.29
 psycopg2-binary==2.9.9
 boto3==1.34.70
-scikit-learn==1.4.2
-scipy==1.12.0
+scikit-learn>=1.4.2
+scipy>=1.12.0
 pytest==8.0.0
 tqdm==4.66.2
 matplotlib==3.8.3
@@ -33,11 +33,11 @@ torchaudio==2.3.1
 
 # umap_narrative
 # Clustering and dimensionality reduction
-umap-learn>=0.5.2
+umap-learn>=0.5.7
 sentence-transformers>=2.2.0
 hdbscan>=0.8.40
-numba>=0.56.4
-llvmlite>=0.39.0
+numba>=0.61.2
+llvmlite>=0.43.0
 
 # Visualization
 datamapplot>=0.5.1
