--- a/.github/workflows/jest-server-test.yml
+++ b/.github/workflows/jest-server-test.yml
@@ -73,11 +73,14 @@ jobs:
           rm -rf ${{ github.workspace }}/.buildx-cache
           mv ${{ github.workspace }}/.buildx-cache-new ${{ github.workspace }}/.buildx-cache
           
-          # Start containers - remove --profile postgres as GHA service handles postgres
-          docker compose -f docker-compose.yml -f docker-compose.test.yml up -d --build
+          # Start containers
+          # IS_GITHUB_ACTION (from step env) will be available as an environment variable for 'docker compose build'
+          # if the Dockerfiles/compose files are set up to use it via build args.
+          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres --profile local-services up -d --build
         env:
           DOCKER_BUILDKIT: 1
           COMPOSE_DOCKER_CLI_BUILD: 1
+          IS_GITHUB_ACTION: "true"
 
       - name: Run database migrations
         env:
