--- a/.github/workflows/jest-server-test.yml
+++ b/.github/workflows/jest-server-test.yml
@@ -41,6 +41,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Clean up runner space (Targeted)
+        run: |
+          echo "Initial disk space (before cleanup):"
+          df -h
+          echo "Removing large pre-installed software..."
+          sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost "$AGENT_TOOLSDIRECTORY" /opt/hostedtoolcache /usr/local/lib/android/* || echo "Some paths not found or removal failed, continuing."
+          echo "Cleaning apt cache..."
+          sudo apt-get clean -y || echo "apt-get clean failed"
+          echo "Pruning Docker system..."
+          docker system prune -af --volumes || echo "docker system prune failed"
+          echo "Disk space after targeted cleanup:"
+          df -h
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
