--- a/.github/workflows/jest-server-test.yml
+++ b/.github/workflows/jest-server-test.yml
@@ -89,7 +89,7 @@ jobs:
           # Start containers
           # IS_GITHUB_ACTION (from step env) will be available as an environment variable for 'docker compose build'
           # if the Dockerfiles/compose files are set up to use it via build args.
-          docker compose -f docker-compose.yml -f docker-compose.test.yml --env-file test.env --profile postgres --profile local-services up -d --build
+          docker compose -f docker-compose.yml -f docker-compose.test.yml --profile local-services up -d --build
         env:
           DOCKER_BUILDKIT: 1
           COMPOSE_DOCKER_CLI_BUILD: 1
