sentence transformer model

--- a/example.env
+++ b/example.env
@@ -124,6 +124,12 @@ OPENAI_API_KEY=
 # A value in miliseconds for caching AI responses for narrativeReport
 MAX_REPORT_CACHE_DURATION=
 
+###### SENTENCE TRANSFORMER ######
+# Default model for English text (384-dimensional embeddings)
+SENTENCE_TRANSFORMER_MODEL=all-MiniLM-L6-v2
+# Alternative multilingual model (uncomment to use)
+# SENTENCE_TRANSFORMER_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
+
 
 ###### DYNAMODB ######
 # When using local DynamoDB, this should be http://dynamodb:8000.
