Te comment moderation 2.0 (#2084)
* begin mod capability

* update gemini api

* fix xml output

* lightening fast

* clean up and fine tuning

* don't analyze comment from mods

* fix lint

* test fix

* try test fixing

* add another mock

* try to make mock global

* try better mock path

* move setup file

* delete test for unused code path

* try more debugging

* attempt try catch

* remove console log

* add back deleted suite

--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "@google-cloud/aiplatform": "^3.34.0",
     "@google-cloud/translate": "^8.5.1",
     "@google-cloud/vertexai": "^1.9.0",
+    "@google/genai": "^1.7.0",
     "@google/generative-ai": "^0.21.0",
     "@sinclair/typebox": "^0.34.3",
     "@tevko/sensemaking-tools": "^1.0.15",
