--- a/file-server/nginx/nginx-ssl.site.default.conf
+++ b/file-server/nginx/nginx-ssl.site.default.conf
@@ -1,5 +1,3 @@
-# nginx-proxy.conf
-
 server {
     listen      [::]:80 ipv6only=off;
     listen      [::]:443 ipv6only=off ssl http2;
@@ -12,9 +10,6 @@ server {
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA26';
     ssl_prefer_server_ciphers on;
 
-    # --- SIMPLIFIED ROUTING LOGIC ---
-
-    # Rule 1: Route requests for Astro's assets.
     location /_astro/ {
         proxy_pass http://client-participation-alpha:4321;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -26,7 +21,6 @@ server {
         proxy_request_buffering off;
     }
 
-    # Rule 2: A single block to handle all /alpha/ traffic.
     location /alpha/ {
         # This rule removes the /alpha prefix before sending to the container.
         # e.g., /alpha/embed.js becomes /embed.js
@@ -43,7 +37,7 @@ server {
         proxy_request_buffering off;
     }
 
-    # Rule 3 (Fallback): All other requests go to the main backend server.
+    # (Fallback): All other requests go to the main backend server.
     location / {
         proxy_pass http://server:${API_SERVER_PORT};
         proxy_set_header X-Forwarded-Proto $scheme;
