get auth working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       dockerfile: Dockerfile
       args:
         - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
+        - OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
+        - OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
     container_name: client-participation-alpha
     restart: unless-stopped
     networks:
@@ -38,6 +40,8 @@ services:
     environment:
       - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
       - INTERNAL_SERVICE_URL=${INTERNAL_SERVICE_URL}
+      - PUBLIC_OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
+      - PUBLIC_OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
     depends_on:
       - "server"
   server:
