--- a/delphi/requirements.txt
+++ b/delphi/requirements.txt
@@ -57,6 +57,7 @@ pytest-asyncio>=0.21.0
 pytest-cov>=4.0.0
 
 anthropic>=0.5.0
+openai>=1.0.0
 
 # These should be installed from source (handled in Dockerfile)
 # evoc>=0.1.3
