--- a/example.env
+++ b/example.env
@@ -186,3 +186,6 @@ ENCRYPTION_PASSWORD_00001=
 # (Deprecated) Basic Auth settings for certain requests between math and api services.
 WEBSERVER_PASS=ws-pass
 WEBSERVER_USERNAME=ws-user
+
+GENAI_MODEL=gpt-4o
+ANTHROPIC_MODEL=claude-3-sonnet-20240229
