--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -106,20 +106,21 @@ services:
     restart: unless-stopped
 
   nginx-proxy:
+    image: docker.io/compdem/polis-nginx-proxy:${TAG:-dev}
     build:
       context: ./file-server
       dockerfile: nginx.Dockerfile
-    depends_on:
-      - server
-    environment:
-      - API_SERVER_PORT=5000
     labels:
-      polis_tag: test
+      polis_tag: ${TAG:-dev}
+    environment:
+      - API_SERVER_PORT=${API_SERVER_PORT:-5000}
+    depends_on:
+      - "server"
     networks:
-      - polis-test
+      - "polis-net"
     ports:
-      - 80:80
-      - 443:443
+      - ${HTTP_PORT:-80}:80
+      - ${HTTPS_PORT:-443}:443
 
   file-server:
     image: docker.io/compdem/polis-file-server:${TAG:-dev}
