--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -117,7 +117,7 @@ services:
     depends_on:
       - "server"
     networks:
-      - "polis-net"
+      - "polis-test"
     ports:
       - ${HTTP_PORT:-80}:80
       - ${HTTPS_PORT:-443}:443
