--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -121,6 +121,8 @@ services:
     ports:
       - ${HTTP_PORT:-80}:80
       - ${HTTPS_PORT:-443}:443
+    volumes:
+      - ${AUTH_CERTS_PATH:-~/.simulacrum/certs}:/etc/nginx/certs:ro
 
   file-server:
     image: docker.io/compdem/polis-file-server:${TAG:-dev}
