update test action

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -36,6 +36,7 @@ jobs:
         
         # Copy mkcert root CA to the certs directory for Docker containers
         cp "$(mkcert -CAROOT)/rootCA.pem" ./rootCA.pem
+        chmod 644 localhost-key.pem
         
         # List generated files for debugging
         echo "Generated certificates:"
@@ -89,11 +90,14 @@ jobs:
       if: always()
       run: |
         # Show logs from critical services for debugging
+        echo "=== NGINX Proxy logs ==="
+        docker compose -f docker-compose.test.yml logs nginx-proxy || true
+
         echo "=== OIDC Simulator logs ==="
-        docker compose -f docker-compose.test.yml logs oidc-simulator | tail -100
+        docker compose -f docker-compose.test.yml logs oidc-simulator || true
         
         echo "=== Server logs ==="
-        docker compose -f docker-compose.test.yml logs server | tail -100
+        docker compose -f docker-compose.test.yml logs server || true
 
     - name: Run auth setup test
       run: |
