--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,6 +5,25 @@
 # Run with: `docker compose -f docker-compose.test.yml --env-file test.env up --build`.
 
 services:
+  client-participation-alpha:
+    build:
+      context: ./client-participation-alpha
+      dockerfile: Dockerfile
+      args:
+        - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
+        - OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
+        - OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
+    container_name: client-participation-alpha
+    restart: unless-stopped
+    networks:
+      - "polis-test"
+    environment:
+      - PUBLIC_SERVICE_URL=${PUBLIC_SERVICE_URL}
+      - INTERNAL_SERVICE_URL=${INTERNAL_SERVICE_URL}
+      - PUBLIC_OIDC_CACHE_KEY_PREFIX=${OIDC_CACHE_KEY_PREFIX}
+      - PUBLIC_OIDC_CACHE_KEY_ID_TOKEN_SUFFIX=${OIDC_CACHE_KEY_ID_TOKEN_SUFFIX}
+    depends_on:
+      - "server"
   server:
     environment:
       - DATABASE_SSL=false
