Topic Selection and New Comment Routing (#2117)
# Configurable Topic-Informed Comment Routing for Alpha Client (and more)

## Client Participation Alpha

- centralize JWT handling
- convert net.js to typescript
- fetch NextComment upon hydration for personalization (ie don't show voted on comment)

## Server

- dedicated NextComment module
- checks for TOPICAL_COMMENT_RATIO (float)
- if ^ is set, blends NextComment selection between Topic-Informed comment pool and traditional prioritization
- graceful handling of empty-ish pca objects when there are comments but zero votes
- include DynamoDB helpers in integration tests
- integration tests for NextComment routing

## E2E

- test comment csv upload
- test report generation and viewing for "empty-ish" pca with comments but zero votes

## Client Report

- graceful handling of empty-ish pca objects (has comments, zero votes)

## Math

- enhanced Postgres connection pooling
- reduced risk of exhausting postgres connections and crashing
- reduced risk of "zombie" postgres connections that don't get cleaned up (mainly in test runs)

## Postgres

- *Migration* 000012 creates topic_agenda_selections table
- Improved stability in test & dev docker setups

## Misc

- consolidated Authentication docs
- improved testing stability overall
- update example.env files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -43,6 +43,22 @@ services:
     restart: no
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
+    # PostgreSQL configuration for development/testing
+    command: >
+      postgres 
+      -c max_connections=${POSTGRES_MAX_CONNECTIONS:-300}
+      -c shared_buffers=256MB
+      -c effective_cache_size=1GB
+      -c work_mem=4MB
+      -c maintenance_work_mem=64MB
+      -c wal_buffers=16MB
+      -c checkpoint_completion_target=0.9
+      -c checkpoint_timeout=10min
+      -c log_connections=on
+      -c log_disconnections=on
+      -c autovacuum=on
+      -c autovacuum_max_workers=3
+      -c autovacuum_naptime=30s
 
   file-server:
     build:
@@ -81,3 +97,20 @@ services:
       - AUTH_SIMULATOR_PORT=${AUTH_SIMULATOR_PORT:-3000}
     networks:
       - polis-net
+
+  dynamodb-admin:
+    image: aaronshaf/dynamodb-admin:latest
+    container_name: polis-dynamodb-admin
+    ports:
+      - "8001:8001"
+    environment:
+      - DYNAMO_ENDPOINT=${DYNAMODB_ENDPOINT}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-}
+    networks:
+      - polis-net
+    depends_on:
+      - dynamodb
+    profiles:
+      - local-services
