--- a/server/example.env
+++ b/server/example.env
@@ -29,3 +29,10 @@ JWT_PRIVATE_KEY_PATH=./keys/jwt-private.pem
 JWT_PUBLIC_KEY_PATH=./keys/jwt-public.pem
 POLIS_JWT_ISSUER=https://pol.is/
 POLIS_JWT_AUDIENCE=participants
+
+# DynamoDB
+DYNAMODB_ENDPOINT=http://localhost:8000
+
+# Decimal between 0.0 and 1.0. This determines how frequently to
+# pull the next comment from selected topics, if available.
+TOPICAL_COMMENT_RATIO=0.6
