--- a/client-participation-alpha/tsconfig.json
+++ b/client-participation-alpha/tsconfig.json
@@ -9,6 +9,7 @@
   ],
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "module": "esnext"
   }
 }
