--- a/example.env
+++ b/example.env
@@ -174,6 +174,14 @@ POLIS_JWT_AUDIENCE=participants
 POLIS_JWT_ISSUER=https://pol.is/
 
 
+###### CLIENT PARTICIPATION ALPHA (optional) ######
+INTERNAL_SERVICE_URL=http://host.docker.internal:5000/api/v3
+PUBLIC_SERVICE_URL=http://localhost/api/v3
+# Decimal between 0.0 and 1.0. This determines how frequently to
+# pull the next comment from selected topics, if available.
+TOPICAL_COMMENT_RATIO=0.6
+
+
 ###### CLIENT SIDE CONFIG ######
 # If building client assets, only the following variables are needed:
 # * AUTH_AUDIENCE
