--- a/client-participation-alpha/package.json
+++ b/client-participation-alpha/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -13,7 +14,7 @@
     "@astrojs/react": "^4.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "^5.11.0",
+    "astro": "^5.12.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
