--- a/client-report/package.json
+++ b/client-report/package.json
@@ -31,6 +31,7 @@
     "event-hooks-webpack-plugin": "^2.3.0",
     "glob": "~10.3.3",
     "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
