--- a/delphi/Dockerfile
+++ b/delphi/Dockerfile
@@ -78,6 +78,7 @@
   WORKDIR /app
   
   COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+  COPY --from=builder /usr/local/bin /usr/local/bin
   
   COPY polismath/ ./polismath/
   COPY scripts/ ./scripts/
