--- a/.github/workflows/deploy-alpha-aws.yml
+++ b/.github/workflows/deploy-alpha-aws.yml
@@ -81,8 +81,8 @@ jobs:
   deploy-euro:
     name: Deploy to Europe
     runs-on: ubuntu-latest
-    needs: build-and-push-images # This job also runs after images are built
-    environment: europe # RECOMMENDED: Create a 'europe' environment in GitHub
+    needs: build-and-push-images
+    environment: europe
 
     steps:
       - name: Checkout code
@@ -96,7 +96,20 @@ jobs:
           aws-region: eu-central-1
 
       - name: Create Euro deployment package
-        run: zip -r deployment-euro.zip appspec-euro.yml scripts-euro/* docker-compose.yml
+        run: |
+          # 1. Create a clean staging directory
+          mkdir staging_dir
+
+          # 2. Copy and RENAME appspec-euro.yml to appspec.yml inside the staging dir
+          cp appspec-euro.yml staging_dir/appspec.yml
+
+          # 3. Copy the other necessary files and directories into the staging dir
+          cp -r euro-scripts staging_dir/
+          cp docker-compose.yml staging_dir/
+
+          # 4. Go into the staging directory and create the zip from there
+          cd staging_dir
+          zip -r ../deployment-euro.zip .
 
       - name: Upload Euro deployment package to S3
         run: aws s3 cp deployment-euro.zip s3://polis-deployment-packages-954495807218-eu-central-1/deployments/deployment.zip
