--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "@anthropic-ai/tokenizer": "^0.0.4",
     "@aws-sdk/client-dynamodb": "^3.840.0",
     "@aws-sdk/client-s3": "^3.840.0",
+    "@aws-sdk/client-ses": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.840.0",
     "@aws-sdk/s3-request-presigner": "^3.840.0",
     "@babel/preset-env": "^7.27.2",
