--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -254,6 +254,22 @@ services:
       polis_tag: ${TAG:-dev}
     profiles:
       - local-services
+  
+  ses-local:
+    image: jdelibas/aws-ses-local:latest
+    container_name: polis-ses-local
+    ports:
+      - "8005:8005"
+    networks:
+      - "polis-net"
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-ses-local-key}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-ses-local-secret}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
+    labels:
+      polis_tag: ${TAG:-dev}
+    profiles:
+      - local-services
 
   # Ollama for LLM processing
   ollama:
