swap mail docker container

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -68,7 +68,7 @@ services:
       - ${STATIC_FILES_PORT:-8080}:${STATIC_FILES_PORT:-8080}
 
   ses-local:
-    image: jdelibas/aws-ses-local:latest
+    image: dasprid/aws-ses-v2-local:latest
     container_name: polis-ses-local
     ports:
       - "8005:8005"
