--- a/example.env
+++ b/example.env
@@ -56,6 +56,7 @@ ADMIN_EMAIL_DATA_EXPORT=
 ADMIN_EMAIL_EMAIL_TEST=
 ADMIN_EMAILS=[]
 POLIS_FROM_ADDRESS="Example <team@example.com>"
+SES_ENDPOINT=http:localhost:8005
 
 
 ###### BOOLEAN FLAGS ######
