--- a/test.env
+++ b/test.env
@@ -8,7 +8,7 @@ NODE_ENV=production
 SERVER_ENV_FILE=test.env
 SERVER_LOG_LEVEL=debug
 ADMIN_UIDS=
-SES_ENDPOINT=http:localhost:8005
+SES_ENDPOINT=http://ses-local:8005
 
 DOMAIN_OVERRIDE=localhost
 EMBED_SERVICE_HOSTNAME=localhost
