--- a/test.env
+++ b/test.env
@@ -65,3 +65,4 @@ PUBLIC_SERVICE_URL=http://localhost/api/v3
 # Decimal between 0.0 and 1.0. This determines how frequently to
 # pull the next comment from selected topics, if available.
 TOPICAL_COMMENT_RATIO=1.0
+POLIS_FROM_ADDRESS=test@pol.is.test
