clarify test environment (#2215)

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -63,7 +63,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - LOGGING_LEVEL=${MATH_LOG_LEVEL:-warn}
-      - MATH_ENV=${MATH_ENV:-prod}
+      - MATH_ENV=${MATH_ENV:-dev}
       - WEBSERVER_USERNAME=${WEBSERVER_USERNAME}
       - WEBSERVER_PASS=${WEBSERVER_PASS}
     networks:
