--- a/server/example.env
+++ b/server/example.env
@@ -6,10 +6,11 @@
 
 API_DEV_HOSTNAME=localhost:5000
 API_SERVER_PORT=5000
-DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@localhost:5432/polis-dev
+# DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@localhost:5432/polis-dev # DEV
+DATABASE_URL=postgres://postgres:PdwPNS2mDN73Vfbc@localhost:5432/polis-test # TEST
 DEV_MODE=true
 DOMAIN_OVERRIDE=
-MATH_ENV=prod
+MATH_ENV=dev
 POLIS_FROM_ADDRESS="Example <team@example.com>"
 SERVER_LOG_LEVEL=info
 STATIC_FILES_ADMIN_PORT=8080
