--- a/test.env
+++ b/test.env
@@ -23,7 +23,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 DATABASE_URL=postgres://postgres:PdwPNS2mDN73Vfbc@postgres:5432/polis-test
 
-MATH_ENV=prod
+MATH_ENV=dev
 MATH_LOG_LEVEL=warn
 WEBSERVER_PASS=ws-pass
 WEBSERVER_USERNAME=ws-user
